# elementary-vae

./: .gitignore  README.md  pyproject.toml
elementary_vae/: __init__.py  train_autoencoder.py  train_vae.py
elementary_vae/data/: __init__.py  mnist_dataset.py
elementary_vae/models/: __init__.py  autoencoder.py  vae.py
elementary_vae/trainers/: __init__.py  autoencoder_trainer.py  base_trainer.py  vae_trainer.py
elementary_vae/utils/: __init__.py  visualization.py
